웹 링크 수정

--- a/public/kry_project_json.json
+++ b/public/kry_project_json.json
@@ -19,7 +19,7 @@
       "https://fks1311.github.io/cdn/public/assets/portfolio/home.gif",
       "https://fks1311.github.io/cdn/public/assets/portfolio/about.gif"
     ],
-    "link": "https://github.com/fks1311"
+    "link": "https://day6-fanground.vercel.app"
   },
   {
     "thumbnails": "https://fks1311.github.io/cdn/public/assets/moviezip/home-main.png",
@@ -28,9 +28,8 @@
     "use_tech": "Next.js, react-query, axios, styled-components, framer-motion",
     "project_images": [
       "https://fks1311.github.io/cdn/public/assets/moviezip/home-main.png",
-      "https://fks1311.github.io/cdn/public/assets/moviezip/mvz_home.gif",
-      "https://fks1311.github.io/cdn/public/assets/moviezip/nav.gif"
+      "https://fks1311.github.io/cdn/public/assets/moviezip/mvz_home.gif"
     ],
-    "link": "https://velog.io/@well_log/posts"
+    "link": "https://movie-zip.netlify.app"
   }
 ]
