chore: to.do.focus 추가 및 포트폴리오 assets 제거

--- a/public/kry_project_json.json
+++ b/public/kry_project_json.json
@@ -4,11 +4,11 @@
     "project_detail": "현재 보고 계신 포트폴리오이며, Next.js 프레임워크를 사용했습니다. 현재 이 포트폴리오는 app router 방식으로 설계되어 있으며, styled-components와 framer-motion의 라이브러리를 활용하였습니다.",
     "use_tech": "Next.js, styled-components, framer-motion",
     "project_images": [
-      "https://fks1311.github.io/cdn/public/assets/portfolio/home.gif",
-      "https://fks1311.github.io/cdn/public/assets/portfolio/about.gif",
-      "https://fks1311.github.io/cdn/public/assets/portfolio/projects.gif",
-      "https://fks1311.github.io/cdn/public/assets/portfolio/project_detail.gif",
-      "https://fks1311.github.io/cdn/public/assets/portfolio/contact.gif"
+      "https://fks1311.github.io/kim_ran_young/public/assets/home.gif",
+      "https://fks1311.github.io/kim_ran_young/public/assets/about.gif",
+      "https://fks1311.github.io/kim_ran_young/public/assets/projects.gif",
+      "https://fks1311.github.io/kim_ran_young/public/assets/project_detail.gif",
+      "https://fks1311.github.io/kim_ran_young/public/assets/contact.gif"
     ],
     "link": "/",
     "blog": "https://velog.io/@well_log/DR-PORTFOLIO"
@@ -42,5 +42,21 @@
     ],
     "link": "https://movie-zip.netlify.app",
     "blog": "https://velog.io/@well_log/DR-Movie-Zip"
+  },
+  {
+    "subject": "to•do•focus",
+    "project_detail": "Typescript를 사용해보기 위해 만들어진 사이트로, React 기반으로 만들어진 Todo + 뽀모도로를 합친 사이트입니다. 오늘/내일/이번주/완료됨으로 구분되어 있습니다. 뽀모도로는 기본 25분으로 설정했으며 본인이 원하는 타이머로 조정도 가능합니다. 또한 입력된 일정들은 선택된 네비에 따라 완료/미루기/취소/삭제가 가능합니다. (완료됨에 있는 일정들은 선택 시, 오늘 일정으로 추가됩니다.) 하루 경과 시, 내일의 일정은 오늘로 이동하며, 일주일 경과 시 모든 일정과 타이머 시간은 초기화됩니다. 해당 프로젝트는 DB를 사용하지 않고 LocalStorage에 데이터를 저장하여 관리합니다.",
+    "use_tech": "React, TypeScript, Recoil, styled-components, framer-motion, craco",
+    "project_images": [
+      "https://fks1311.github.io/to.do.focus/public/assets/total.gif",
+      "https://fks1311.github.io/to.do.focus/public/assets/add.gif",
+      "https://fks1311.github.io/to.do.focus/public/assets/completed.gif",
+      "https://fks1311.github.io/to.do.focus/public/assets/delay.gif",
+      "https://fks1311.github.io/to.do.focus/public/assets/cancel.gif",
+      "https://fks1311.github.io/to.do.focus/public/assets/delete.gif",
+      "https://fks1311.github.io/to.do.focus/public/assets/timer.gif"
+    ],
+    "link": "https://to-do-focus.netlify.app/",
+    "blog": ""
   }
 ]
