--- a/public/kry_project_json.json
+++ b/public/kry_project_json.json
@@ -57,6 +57,6 @@
       "https://fks1311.github.io/to.do.focus/public/assets/timer.gif"
     ],
     "link": "https://to-do-focus.netlify.app/",
-    "blog": ""
+    "blog": "https://velog.io/@well_log/todofocus-1-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EC%8B%9C%EC%9E%91"
   }
 ]
